src/test/deca/context/invalid/created/decl_var/decl_type_String.deca
// Description :
//    test d'une déclaration de variable avec type String, non reconnu en Deca
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: Type non reconnu


{
String a; 
//String n'est pas un type reconnu pour la declaration de variable
}